test/e2e/static_resources/busybox-managed-csi-encrypted-cmk.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bb-managed-csi-encrypted-cmk
  namespace: default
spec:
  containers:
    - image: mcr.microsoft.com/cbl-mariner/busybox:2.0
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
      volumeMounts:
        - mountPath: "/pv"
          name: pv
  restartPolicy: Always
  volumes:
    - name: pv
      persistentVolumeClaim:
        claimName: managed-csi-encrypted-cmk
