test/e2e/static_resources/loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: test-deployment
spec:
  selector:
    matchLabels:
      app: test
  replicas: 2
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: nginx
          image: mcr.microsoft.com/azurelinux/base/nginx:1
          command:
            - "/bin/sh"
            - "-c"
            - "mkdir -p /usr/share/nginx/html && echo 'hello world' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
          ports:
            - containerPort: 80
              name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: test-lb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-web-svc
