test/e2e/static_resources/pvc-managed-csi-encrypted-cmk.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: managed-csi-encrypted-cmk
  namespace: default
spec:
  storageClassName: managed-csi-encrypted-cmk
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 3Gi
---
apiVersion: v1
kind: Pod
metadata:
  name: bb-managed-csi-encrypted-cmk
  namespace: default
spec:
  containers:
    - image: mcr.microsoft.com/azurelinux/busybox:1.36
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
      volumeMounts:
        - mountPath: "/pv"
          name: pv
  restartPolicy: Always
  volumes:
    - name: pv
      persistentVolumeClaim:
        claimName: managed-csi-encrypted-cmk
