test/e2e/static_resources/route.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: route-test
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: anyuid
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: system:openshift:scc:anyuid
subjects:
  - kind: ServiceAccount
    namespace: route-test
    name: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: route-test
  name: test-deployment
spec:
  selector:
    matchLabels:
      app: test
  replicas: 2
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: nginx
          image: mcr.microsoft.com/azurelinux/base/nginx:1
          command:
            - "/bin/sh"
            - "-c"
            - "mkdir -p /usr/share/nginx/html && echo 'hello world' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 80
              name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  namespace: route-test
  name: test-svc
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-web-svc
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: route-test
  name: test-route
spec:
  to:
    kind: Service
    name: test-svc
  port:
    targetPort: 80
  wildcardPolicy: None
